Extract coordinates from census tract dbfs and calculate distance between tract centroids

--- a/1_cluster_us_population.ipynb
+++ b/1_cluster_us_population.ipynb
@@ -38,9 +38,12 @@
     "import pandas as pd\n",
     "\n",
     "## import specific function\n",
-    "from os       import mkdir, listdir\n",
-    "from os.path  import isfile, isdir\n",
-    "from datetime import datetime, timedelta"
+    "from os             import mkdir, listdir\n",
+    "from os.path        import isfile, isdir\n",
+    "from datetime       import datetime, timedelta\n",
+    "from dbfread        import DBF\n",
+    "from geopy.distance import geodesic\n",
+    "from ipyparallel    import Cluster"
    ]
   },
   {
@@ -61,7 +64,7 @@
     "## set up standard directories if needed\n",
     "def make_standard_file_system():\n",
     "    for i in ['A_Input', 'B_Intermediate', 'C_Output']:\n",
-    "        if ~isdir(i): mkdir(i)\n",
+    "        if not isdir(i): mkdir(i)\n",
     "\n",
     "## log time elapsed\n",
     "time_log = dict()\n",
@@ -80,7 +83,17 @@
     "            print(i.rjust(5) + ':', time_log[i])\n",
     "    else:\n",
     "        time_log[the_id] = now_time\n",
-    "\n",
+    "        \n",
+    "## toggle cache versus build\n",
+    "def build_or_cache(function, address, permit):\n",
+    "    if permit and isfile(address):\n",
+    "        print('Build/Cache Decision: Cache')\n",
+    "        the_file = pd.read_csv(address)\n",
+    "    else:\n",
+    "        print('Build/Cache Decision: Build')\n",
+    "        the_file = function()\n",
+    "    return the_file\n",
+    "    \n",
     "## execute functions\n",
     "make_standard_file_system()\n",
     "log_time('H2')"
@@ -101,11 +114,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## server mode (switches off data sampling; full distance data too big for a PC)\n",
+    "server_mode = False\n",
+    "\n",
     "## GD settings\n",
     "set_gd = dict()\n",
     "\n",
     "## RD settings\n",
-    "set_rd = dict()\n",
+    "set_rd = {'1_cache': True}\n",
     "\n",
     "## MD settings\n",
     "set_md = dict()\n",
@@ -133,31 +149,93 @@
    "id": "d373c0c5-10b3-4028-95c4-ed57b16fdff3",
    "metadata": {},
    "source": [
-    "#### GD1"
+    "Primary data source:\n",
+    "+ 2020 TIGER shapefiles from the US Census (the .dbf files)\n",
+    "+ 2020 DP series population summary tables from US Census (as needed)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f60d1c80-3db1-4246-b8e1-2bb46c20ba28",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "70783f46-a428-411f-89ee-b23e5ba51a28",
+   "id": "3b2efc95-73d7-4ea5-a4bf-4c531d8dc57b",
    "metadata": {},
    "source": [
-    "#### GD2"
+    "#### GD1 - read in primary data (census tract shapefile .dbfs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f066281a-8204-4b6c-b5c7-e6238fd01e7b",
-   "metadata": {},
+   "execution_count": 5,
+   "id": "1c9897df-5ebb-46bd-a49e-98718c379f6b",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
+   "source": [
+    "## read in dbf files for census tracts\n",
+    "def read_tract_dbf(directory):\n",
+    "    \n",
+    "    ## file dbf files in target directory\n",
+    "    dbf_addr = listdir(directory)\n",
+    "    dbf_addr = [i for i in dbf_addr if i[-3::] == 'dbf']\n",
+    "    \n",
+    "    ## read relevant columns from each\n",
+    "    desired_columns = {'GEOID': str,\n",
+    "                       'STATEFP': str, 'COUNTYFP':str, 'TRACTCE':str,\n",
+    "                        'INTPTLAT': float, 'INTPTLON': float, 'ALAND': int}\n",
+    "    dbf_data = []\n",
+    "    for i in dbf_addr:\n",
+    "        i_dbf = pd.DataFrame(iter(DBF(directory + '/' + i)))\n",
+    "        i_dbf = i_dbf[desired_columns.keys()].astype(desired_columns)\n",
+    "        dbf_data.append(i_dbf)\n",
+    "        \n",
+    "    ## compile data into a single file and export\n",
+    "    dbf_data = pd.concat(dbf_data, axis = 0).sort_values('GEOID')\n",
+    "    dbf_data = dbf_data.reset_index(drop = True)\n",
+    "    dbf_data.to_csv('B_Intermediate/dbf_data.csv.gz')\n",
+    "    return dbf_data\n",
+    "    \n",
+    "## execute code\n",
+    "dbf_data = read_tract_dbf('A_Input/tracts_dbf')\n",
+    "if not server_mode:\n",
+    "    dbf_data = dbf_data.loc[dbf_data.STATEFP.isin(['49', '08', '04', '35'])]\n",
+    "log_time('GD1')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dca96540-be5a-4a32-b864-e943df7b9fec",
+   "metadata": {},
+   "source": [
+    "#### GD2 - Read in secondary data (census DP table columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b201aacb-a203-42ba-a23a-dd759d3dbd5c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             GEOID STATEFP COUNTYFP TRACTCE   INTPTLAT    INTPTLON       ALAND\n",
+      "1437   04001942600      04      001  942600  36.752621 -109.847229  1525247269\n",
+      "1438   04001942700      04      001  942700  36.755256 -109.368058  2990231682\n",
+      "1439   04001944000      04      001  944000  35.950683 -109.146142   791413501\n",
+      "1440   04001944100      04      001  944100  36.388911 -109.316317  1830863806\n",
+      "1441   04001944201      04      001  944201  36.153428 -109.685341   502007070\n",
+      "...            ...     ...      ...     ...        ...         ...         ...\n",
+      "77348  49057210900      49      057  210900  41.174956 -111.958681     4514100\n",
+      "77349  49057211000      49      057  211000  41.181342 -111.978033     1424120\n",
+      "77350  49057211100      49      057  211100  41.164136 -111.979655     4319446\n",
+      "77351  49057211201      49      057  211201  41.157778 -111.887136    23275491\n",
+      "77352  49057211202      49      057  211202  41.150167 -111.946949     8017160\n",
+      "\n",
+      "[4540 rows x 7 columns]\n"
+     ]
+    }
+   ],
    "source": []
   },
   {
@@ -173,16 +251,64 @@
    "id": "52bba94a-9f9a-496d-b8b2-454bcad0619d",
    "metadata": {},
    "source": [
-    "#### RD1"
+    "#### RD1 – calculate and cache geographic distances between tract centroids"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "11a9c611-546b-4d5c-b717-3f6c54cd656a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Build/Cache Decision: Cache\n"
+     ]
+    }
+   ],
+   "source": [
+    "## reshape tract coordinate data to input format\n",
+    "tract_xy = list(zip(dbf_data.INTPTLAT.values, dbf_data.INTPTLON.values))\n",
+    "\n",
+    "## define function to do distance compuations in parallel\n",
+    "def measure_distance_in_parallel(xy = tract_xy):\n",
+    "    the_iter = list(range(0, len(xy)))\n",
+    "    \n",
+    "    ## define engine function that will run on each parallel process\n",
+    "    def measure_distance_parallel_slice(n, xy_col = xy):\n",
+    "        from geopy.distance import geodesic\n",
+    "        xy_col = xy_col.copy()\n",
+    "        xy_row = xy_col[n]\n",
+    "        xy_dist = []\n",
+    "        for i in xy_col[0:n]: xy_dist.append(0)\n",
+    "        for i in xy_col[n::]:\n",
+    "            xy_dist.append(int(round(geodesic(xy_row, i).miles)))\n",
+    "        return xy_dist\n",
+    "\n",
+    "    ## run engine in parallel for each slice of the data\n",
+    "    with Cluster(n = 4) as clust:\n",
+    "        view = clust.load_balanced_view()\n",
+    "        asyncresult = view.map_async(measure_distance_parallel_slice, the_iter)\n",
+    "        asyncresult.wait_interactive()\n",
+    "        result = asyncresult.get()\n",
+    "        \n",
+    "    ## package results and export\n",
+    "    result = np.array(result)\n",
+    "    result = result + result.T\n",
+    "    np.savetxt('B_Intermediate/tract_distance.csv.gz', result, delimiter = ',',\n",
+    "            fmt = '%u')\n",
+    "    return result\n",
+    "\n",
+    "tract_distance = build_or_cache(\n",
+    "    function = measure_distance_in_parallel,\n",
+    "    address = 'B_Intermediate/tract_distance.csv.gz',\n",
+    "    permit = set_rd['1_cache']\n",
+    "    )\n",
+    "\n",
+    "log_time('RD1')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -354,10 +480,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "8291e682-93f1-46a9-8712-597f5faccaae",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        0   27   68   39   42   45   30   55   82   81  ...  328.41  327.36  \\\n",
+      "0      27    0   57   25   45   41   37   55   78   84  ...     337     337   \n",
+      "1      68   57    0   32   33   24   43   26   26   42  ...     393     392   \n",
+      "2      39   25   32    0   26   18   25   32   53   61  ...     362     361   \n",
+      "3      42   45   33   26    0   12   13   13   41   40  ...     369     368   \n",
+      "4      45   41   24   18   12    0   19   15   38   43  ...     372     371   \n",
+      "...   ...  ...  ...  ...  ...  ...  ...  ...  ...  ...  ...     ...     ...   \n",
+      "4534  326  335  391  360  368  370  355  380  408  405  ...       4       4   \n",
+      "4535  326  336  392  360  368  371  355  381  409  405  ...       3       3   \n",
+      "4536  325  335  391  359  367  370  354  380  408  404  ...       3       3   \n",
+      "4537  323  333  389  357  365  368  352  378  405  402  ...       8       8   \n",
+      "4538  324  333  389  358  366  368  353  378  406  403  ...       5       5   \n",
+      "\n",
+      "      327.37  326.25  327.38  326.26  326.27  325.32  323.26  324.24  \n",
+      "0        337     336     337     335     336     335     333     333  \n",
+      "1        393     392     393     391     392     391     389     389  \n",
+      "2        361     360     361     360     360     359     357     358  \n",
+      "3        369     368     369     368     368     367     365     366  \n",
+      "4        372     371     372     370     371     370     368     368  \n",
+      "...      ...     ...     ...     ...     ...     ...     ...     ...  \n",
+      "4534       5       5       1       0       1       1       4       2  \n",
+      "4535       4       4       1       1       0       1       5       3  \n",
+      "4536       4       3       2       1       1       0       5       2  \n",
+      "4537       8       8       5       4       5       5       0       3  \n",
+      "4538       5       5       3       2       3       2       3       0  \n",
+      "\n",
+      "[4539 rows x 4540 columns]\n",
+      "4540\n",
+      "(4539, 4540)\n"
+     ]
+    }
+   ],
    "source": []
   },
   {
@@ -370,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "db352693-855a-402d-af68-6a1d8639a427",
    "metadata": {},
    "outputs": [
@@ -379,8 +541,10 @@
      "output_type": "stream",
      "text": [
       "Time log:\n",
-      "   H2: 10:20:42\n",
-      "  End: 10:20:42\n"
+      "   H2: 16:12:40\n",
+      "  GD1: 16:12:43\n",
+      "  RD1: 16:12:47\n",
+      "  End: 16:12:47\n"
      ]
     }
    ],
@@ -390,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "9b249d53-d193-4008-9975-a451284ee066",
    "metadata": {},
    "outputs": [],
@@ -415,7 +579,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
