Model population by agglomeration and DBSCAN

--- a/1_cluster_us_population.ipynb
+++ b/1_cluster_us_population.ipynb
@@ -38,12 +38,13 @@
     "import pandas as pd\n",
     "\n",
     "## import specific function\n",
-    "from os             import mkdir, listdir\n",
-    "from os.path        import isfile, isdir\n",
-    "from datetime       import datetime, timedelta\n",
-    "from dbfread        import DBF\n",
-    "from geopy.distance import geodesic\n",
-    "from ipyparallel    import Cluster"
+    "from os              import mkdir, listdir\n",
+    "from os.path         import isfile, isdir\n",
+    "from datetime        import datetime, timedelta\n",
+    "from dbfread         import DBF\n",
+    "from geopy.distance  import geodesic\n",
+    "from ipyparallel     import Cluster\n",
+    "from sklearn.cluster import AgglomerativeClustering, DBSCAN, OPTICS"
    ]
   },
   {
@@ -88,7 +89,7 @@
     "def build_or_cache(function, address, permit):\n",
     "    if permit and isfile(address):\n",
     "        print('Build/Cache Decision: Cache')\n",
-    "        the_file = pd.read_csv(address)\n",
+    "        the_file = pd.read_csv(address, index_col = 0)\n",
     "    else:\n",
     "        print('Build/Cache Decision: Build')\n",
     "        the_file = function()\n",
@@ -124,7 +125,7 @@
     "set_rd = {'1_cache': True}\n",
     "\n",
     "## MD settings\n",
-    "set_md = dict()\n",
+    "set_md = {'1_cache': True, '2_cache': True}\n",
     "\n",
     "## EMR settings\n",
     "set_emr = dict()\n",
@@ -190,13 +191,14 @@
     "        \n",
     "    ## compile data into a single file and export\n",
     "    dbf_data = pd.concat(dbf_data, axis = 0).sort_values('GEOID')\n",
+    "    dbf_data['count'] = 1\n",
     "    dbf_data = dbf_data.reset_index(drop = True)\n",
     "    dbf_data.to_csv('B_Intermediate/dbf_data.csv.gz')\n",
     "    return dbf_data\n",
     "    \n",
     "## execute code\n",
     "dbf_data = read_tract_dbf('A_Input/tracts_dbf')\n",
-    "if not server_mode:\n",
+    "if not server_mode: # 04 = AZ, 08 = CO, NM = 35, UT = 49\n",
     "    dbf_data = dbf_data.loc[dbf_data.STATEFP.isin(['49', '08', '04', '35'])]\n",
     "log_time('GD1')"
    ]
@@ -211,31 +213,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "b201aacb-a203-42ba-a23a-dd759d3dbd5c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "             GEOID STATEFP COUNTYFP TRACTCE   INTPTLAT    INTPTLON       ALAND\n",
-      "1437   04001942600      04      001  942600  36.752621 -109.847229  1525247269\n",
-      "1438   04001942700      04      001  942700  36.755256 -109.368058  2990231682\n",
-      "1439   04001944000      04      001  944000  35.950683 -109.146142   791413501\n",
-      "1440   04001944100      04      001  944100  36.388911 -109.316317  1830863806\n",
-      "1441   04001944201      04      001  944201  36.153428 -109.685341   502007070\n",
-      "...            ...     ...      ...     ...        ...         ...         ...\n",
-      "77348  49057210900      49      057  210900  41.174956 -111.958681     4514100\n",
-      "77349  49057211000      49      057  211000  41.181342 -111.978033     1424120\n",
-      "77350  49057211100      49      057  211100  41.164136 -111.979655     4319446\n",
-      "77351  49057211201      49      057  211201  41.157778 -111.887136    23275491\n",
-      "77352  49057211202      49      057  211202  41.150167 -111.946949     8017160\n",
-      "\n",
-      "[4540 rows x 7 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
@@ -256,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "11a9c611-546b-4d5c-b717-3f6c54cd656a",
    "metadata": {},
    "outputs": [
@@ -297,8 +278,8 @@
     "    ## package results and export\n",
     "    result = np.array(result)\n",
     "    result = result + result.T\n",
-    "    np.savetxt('B_Intermediate/tract_distance.csv.gz', result, delimiter = ',',\n",
-    "            fmt = '%u')\n",
+    "    result = pd.DataFrame(result)\n",
+    "    result.to_csv('B_Intermediate/tract_distance.csv.gz')\n",
     "    return result\n",
     "\n",
     "tract_distance = build_or_cache(\n",
@@ -336,35 +317,123 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53422e30-1a5d-4e66-8f4a-431413efad83",
+   "id": "249e4eb3-1b81-4b8f-9700-13e04174d097",
    "metadata": {},
    "source": [
-    "#### MD1"
+    "#### MD0 - build common components"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ddd5cd65-9122-4230-be26-e594d798ab99",
+   "execution_count": 7,
+   "id": "06aa2b3b-cc94-447f-91c0-99ba2dfe6f15",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## score model\n",
+    "def score_model(clusters, d):\n",
+    "    score = clusters * np.ones(d.shape)\n",
+    "    mask = (score != -1) & (score.T != -1)\n",
+    "    score = (score == score.T) * mask * np.array(d)\n",
+    "    the_denom = np.sum(d.sum().values)\n",
+    "    return np.round(np.sum(score) / the_denom, 3)\n",
+    "\n",
+    "## run model across different parameters\n",
+    "model_name = 'EMPTY'\n",
+    "model_list = dict()\n",
+    "def run_model(dist = tract_distance):\n",
+    "    \n",
+    "    ##  retrieve objects from external environment\n",
+    "    model_dict = model_list\n",
+    "    addr_name = model_name\n",
+    "    \n",
+    "    ## declare container objects for model results\n",
+    "    model_clusters = dict()\n",
+    "    model_stats    = dict()\n",
+    "    \n",
+    "    ## fit model and populate container objects with model performance data\n",
+    "    for i in model_dict.keys():\n",
+    "        model_clusters[i] = model_dict[i].fit_predict(dist)\n",
+    "        model_stats[i] = dict()\n",
+    "        model_stats[i]['name'] = i\n",
+    "        model_stats[i]['score'] = score_model(model_clusters[i], d = dist)\n",
+    "        model_stats[i]['clusters'] = len(set(model_clusters[i]))\n",
+    "        model_stats[i]['outliers'] = sum(model_clusters[i] == -1)\n",
+    "        \n",
+    "    ## package results and export\n",
+    "    model_clusters = pd.DataFrame(model_clusters)\n",
+    "    model_clusters.to_csv('B_Intermediate/Model_' + addr_name + '_Clust.csv.gz')\n",
+    "    model_stats = pd.DataFrame(model_stats).T\n",
+    "    model_stats = model_stats.astype({'clusters':int, 'outliers':int})\n",
+    "    model_stats.to_csv('B_Intermediate/Model_' + addr_name + '_Stats.csv')\n",
+    "    return model_stats"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "0e886582-2589-4cea-af93-0911f4c54611",
+   "id": "53422e30-1a5d-4e66-8f4a-431413efad83",
    "metadata": {},
    "source": [
-    "#### MD2"
+    "#### MD1 and MD2 - run models"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3df48228-809e-4e3d-b9c2-996aaae7ccfd",
+   "execution_count": 8,
+   "id": "ddd5cd65-9122-4230-be26-e594d798ab99",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Build/Cache Decision: Build\n",
+      "Build/Cache Decision: Build\n"
+     ]
+    }
+   ],
+   "source": [
+    "## -- cluster population by agglomeration\n",
+    "\n",
+    "## assemble models\n",
+    "model_agglomeration = dict()\n",
+    "for i in range(250 - 150, 250 + 150, 10):\n",
+    "    model_iter = AgglomerativeClustering(\n",
+    "        n_clusters = None, compute_full_tree = True,\n",
+    "        affinity = 'precomputed', linkage = 'average',\n",
+    "        distance_threshold = i)\n",
+    "    model_agglomeration[str(int(i))] = model_iter\n",
+    "    \n",
+    "## execute models\n",
+    "model_name = 'Agglomeration'\n",
+    "model_list = model_agglomeration\n",
+    "agglomeration_score = build_or_cache(\n",
+    "    function = run_model,\n",
+    "    address = 'B_Intermediate/Model_' + model_name + '_Stats.csv',\n",
+    "    permit = set_md['1_cache']\n",
+    "    )\n",
+    "\n",
+    "log_time('MD1')\n",
+    "\n",
+    "## -- cluster population by DBSCAN\n",
+    "\n",
+    "## assemble models\n",
+    "model_dbscan = dict()\n",
+    "for i in range(25 - 15, 25 + 15, 1):\n",
+    "    model_iter = DBSCAN(eps = i, metric = 'precomputed', n_jobs = 8)\n",
+    "    model_dbscan[str(int(i))] = model_iter\n",
+    "    \n",
+    "## execute models\n",
+    "model_name = 'DBSCAN'\n",
+    "model_list = model_dbscan\n",
+    "agglomeration_score = build_or_cache(\n",
+    "    function = run_model,\n",
+    "    address = 'B_Intermediate/Model_' + model_name + '_Stats.csv',\n",
+    "    permit = set_md['2_cache']\n",
+    "    )\n",
+    "\n",
+    "log_time('MD2')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -480,46 +549,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "8291e682-93f1-46a9-8712-597f5faccaae",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "        0   27   68   39   42   45   30   55   82   81  ...  328.41  327.36  \\\n",
-      "0      27    0   57   25   45   41   37   55   78   84  ...     337     337   \n",
-      "1      68   57    0   32   33   24   43   26   26   42  ...     393     392   \n",
-      "2      39   25   32    0   26   18   25   32   53   61  ...     362     361   \n",
-      "3      42   45   33   26    0   12   13   13   41   40  ...     369     368   \n",
-      "4      45   41   24   18   12    0   19   15   38   43  ...     372     371   \n",
-      "...   ...  ...  ...  ...  ...  ...  ...  ...  ...  ...  ...     ...     ...   \n",
-      "4534  326  335  391  360  368  370  355  380  408  405  ...       4       4   \n",
-      "4535  326  336  392  360  368  371  355  381  409  405  ...       3       3   \n",
-      "4536  325  335  391  359  367  370  354  380  408  404  ...       3       3   \n",
-      "4537  323  333  389  357  365  368  352  378  405  402  ...       8       8   \n",
-      "4538  324  333  389  358  366  368  353  378  406  403  ...       5       5   \n",
-      "\n",
-      "      327.37  326.25  327.38  326.26  326.27  325.32  323.26  324.24  \n",
-      "0        337     336     337     335     336     335     333     333  \n",
-      "1        393     392     393     391     392     391     389     389  \n",
-      "2        361     360     361     360     360     359     357     358  \n",
-      "3        369     368     369     368     368     367     365     366  \n",
-      "4        372     371     372     370     371     370     368     368  \n",
-      "...      ...     ...     ...     ...     ...     ...     ...     ...  \n",
-      "4534       5       5       1       0       1       1       4       2  \n",
-      "4535       4       4       1       1       0       1       5       3  \n",
-      "4536       4       3       2       1       1       0       5       2  \n",
-      "4537       8       8       5       4       5       5       0       3  \n",
-      "4538       5       5       3       2       3       2       3       0  \n",
-      "\n",
-      "[4539 rows x 4540 columns]\n",
-      "4540\n",
-      "(4539, 4540)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
@@ -532,6 +565,14 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "20191b03-9043-4e5b-85d2-f97aa357a597",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "id": "db352693-855a-402d-af68-6a1d8639a427",
    "metadata": {},
@@ -541,10 +582,12 @@
      "output_type": "stream",
      "text": [
       "Time log:\n",
-      "   H2: 16:12:40\n",
-      "  GD1: 16:12:43\n",
-      "  RD1: 16:12:47\n",
-      "  End: 16:12:47\n"
+      "   H2: 14:14:21\n",
+      "  GD1: 14:14:24\n",
+      "  RD1: 14:14:26\n",
+      "  MD1: 14:15:00\n",
+      "  MD2: 14:15:37\n",
+      "  End: 14:15:37\n"
      ]
     }
    ],
