Refine secondary dataset that will provide context for the clusters

--- a/1_cluster_us_population.ipynb
+++ b/1_cluster_us_population.ipynb
@@ -248,11 +248,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "b201aacb-a203-42ba-a23a-dd759d3dbd5c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def read_secondary_data():\n",
+    "    \n",
+    "    global potus, income, census\n",
+    "    \n",
+    "    ## read in political voting data\n",
+    "    potus = {'year':int, 'state_po':str, 'county_fips': str, 'mode':str,\n",
+    "             'party':str, 'candidatevotes':int, 'totalvotes':int}\n",
+    "    potus = pd.read_csv('A_Input/countypres_2000-2020.csv.zip',\n",
+    "            dtype = potus, usecols = potus.keys()).set_index('county_fips')\n",
+    "    \n",
+    "    ## read in income data (income > $200k)\n",
+    "    income = {'GEO_ID':str, 'DP03_0061E':str, 'DP03_0051E':str}\n",
+    "    income = pd.read_csv(\n",
+    "        'A_Input/ACSDP5Y2020.DP03_data_with_overlays_2022-04-07T230902.csv.zip',\n",
+    "        dtype = income, usecols = income.keys()).set_index('GEO_ID')\n",
+    "    \n",
+    "    ## read in population, age, race data (≥65yrs, non-hispanic white)\n",
+    "    census = {'GEO_ID':str, 'DP05_0001E':str, 'DP05_0024E':str,'DP05_0077E':str}\n",
+    "    census = pd.read_csv(\n",
+    "        'A_Input/ACSDP5Y2020.DP05_data_with_overlays_2022-04-21T111919.csv.zip',\n",
+    "        dtype = census, usecols = census.keys()).set_index('GEO_ID')\n",
+    "\n",
+    "## execute code\n",
+    "read_secondary_data()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -272,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "11a9c611-546b-4d5c-b717-3f6c54cd656a",
    "metadata": {},
    "outputs": [
@@ -333,16 +358,170 @@
    "id": "9601721c-6ac0-4206-8b41-7dc0f99ba12a",
    "metadata": {},
    "source": [
-    "#### RD2"
+    "#### RD2 - unify all census datasets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "cd121a39-e3dd-4dca-a014-6b67d5a1b2ce",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def refine_census_data(i = income, c = census, d = dbf_data):\n",
+    "    \n",
+    "    ## merge DP03 and DP05 census data\n",
+    "    c = census.join(i)\n",
+    "    \n",
+    "    ## fix column and index names\n",
+    "    cn = c.loc['id', :].str.lower().str.replace(' ', '_').str.split('!!')\n",
+    "    cn = [i[len(i) - 1] for i in cn]\n",
+    "    c.columns = cn\n",
+    "    c = c.drop('id').dropna()\n",
+    "    c.index = c.index.str.slice(9)\n",
+    "    \n",
+    "    ## filter census data to match the dbf files\n",
+    "    c = c.loc[d.GEOID, :].reset_index().rename({'GEO_ID':'GEOID'}, axis = 1)\n",
+    "    \n",
+    "    ## convert count data types to integer and export\n",
+    "    for i in c.columns[1::]: c[i] = c[i].astype(int)\n",
+    "    return c\n",
+    "\n",
+    "## execute data\n",
+    "census_data = refine_census_data()\n",
+    "del census, income"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "349903c8-3bbe-489b-a20c-0a7725fa7933",
+   "metadata": {},
+   "source": [
+    "#### RD3 - convert potus data to census tract scores and merge"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "a70b3a0f-3b80-4a2f-bbb1-90a86a21df67",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TODO: switch this to non-Euclidean distance\n",
+      "TODO: switch this to non-Euclidean distance\n",
+      "TODO: switch this to non-Euclidean distance\n",
+      "TODO: switch this to non-Euclidean distance\n",
+      "TODO: switch this to non-Euclidean distance\n",
+      "\n",
+      "            GEOID  total_population  65_years_and_over  white_alone  \\\n",
+      "0     04001942600              1711                229            0   \n",
+      "1     04001942700              5469                759           49   \n",
+      "2     04001944000              6577               1033          147   \n",
+      "3     04001944100              6183                637          202   \n",
+      "4     04001944201              4540                523          163   \n",
+      "...           ...               ...                ...          ...   \n",
+      "4535  49057210900              7153               1028         5482   \n",
+      "4536  49057211000              3184                461         2451   \n",
+      "4537  49057211100              5622               1088         4839   \n",
+      "4538  49057211201              4209                726         3555   \n",
+      "4539  49057211202              7154               1466         6319   \n",
+      "\n",
+      "      $200,000_or_more  total_votes  rep_votes  \n",
+      "0                   11          896        488  \n",
+      "1                   37         2914       1631  \n",
+      "2                  115         3002       1259  \n",
+      "3                   22         2859       1315  \n",
+      "4                    0         2029        871  \n",
+      "...                ...          ...        ...  \n",
+      "4535               398         3323       2059  \n",
+      "4536                 0         1465        902  \n",
+      "4537               113         2614       1618  \n",
+      "4538               306         2010       1271  \n",
+      "4539               313         3371       2103  \n",
+      "\n",
+      "[4540 rows x 7 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.neighbors import KNeighborsRegressor\n",
+    "\n",
+    "def merge_potus_data(d = dbf_data, p = potus, c = census_data):\n",
+    "    \n",
+    "    ## calculate population centroid for each county\n",
+    "    county_xy = d.copy()[['GEOID', 'INTPTLON', 'INTPTLAT']]\n",
+    "    county_xy['county_fips'] = county_xy['GEOID'].str.slice(0, 5)\n",
+    "    county_xy = county_xy.groupby('county_fips').mean()\n",
+    "    \n",
+    "    ## repair missing totals in source data for some states\n",
+    "    i = (p.year == 2020) * (p.party == 'REPUBLICAN') * (p['mode'] != 'TOTAL')\n",
+    "    i = i.astype(bool)\n",
+    "    missing_total = p.loc[i, ['candidatevotes', 'totalvotes']].copy()\n",
+    "    missing_total = missing_total.groupby(missing_total.index)\n",
+    "    missing_sum = missing_total.sum()\n",
+    "    missing_total = missing_total.max()\n",
+    "    missing_total['candidatevotes'] = missing_sum['candidatevotes']\n",
+    "\n",
+    "    ## simplify potus vote data\n",
+    "    i = (p.year == 2020) * (p.party == 'REPUBLICAN') * (p['mode'] == 'TOTAL')\n",
+    "    p = p.loc[i.astype(bool), ]\n",
+    "    p = p.drop(['year', 'state_po', 'party', 'mode'], axis = 1) \n",
+    "\n",
+    "    ## repair missing vote totals and merge into county coordinates\n",
+    "    missing_total = missing_total.loc[~missing_total.index.isin(p.index), ]\n",
+    "    p = pd.concat([p, missing_total], axis = 0)\n",
+    "    p = p.rename({'candidatevotes':'repvotes'}, axis = 1)\n",
+    "    p = county_xy.join(p)\n",
+    "    \n",
+    "    ## calculate total county population and merge into the politics object\n",
+    "    pop_total = c.copy()[['GEOID', 'total_population']]\n",
+    "    pop_total['GEOID'] = pop_total['GEOID'].str.slice(0, 5)\n",
+    "    pop_total = pop_total.groupby('GEOID').sum().reset_index()\n",
+    "    pop_total = pop_total.rename(\n",
+    "        {'GEOID':'county_fips', 'total_population':'totalpop'}, axis = 1)\n",
+    "    p = p.join(pop_total.set_index('county_fips'))\n",
+    "    \n",
+    "    ## convert figures to percentages\n",
+    "    p['repvotes']  = (p['repvotes'] / p['totalvotes']).round(6)\n",
+    "    p['totalvotes'] = (p['totalvotes'] / p['totalpop']).round(6)\n",
+    "    \n",
+    "    ## retrieve coordinates from dbf_data to census_data\n",
+    "    c = c.set_index('GEOID')\n",
+    "    d = d.set_index('GEOID')\n",
+    "    c = c.join(d[['INTPTLON', 'INTPTLAT']])\n",
+    "    \n",
+    "    print('TODO: switch this to non-Euclidean distance\\n' * 5)\n",
+    "    \n",
+    "    ## -- train knn model on p\n",
+    "\n",
+    "    ## interpolate total potus votes\n",
+    "    tot_model = KNeighborsRegressor(weights = 'distance')\n",
+    "    tot_model = tot_model.fit(p[['INTPTLON', 'INTPTLAT']], p['totalvotes'])\n",
+    "    c['total_votes'] = tot_model.predict(c[['INTPTLON', 'INTPTLAT']])\n",
+    "    c['total_votes'] = (c['total_votes'] * c['total_population']).astype(int)\n",
+    "    \n",
+    "    ## interpolate republican potus votes\n",
+    "    rep_model = KNeighborsRegressor(weights = 'distance')\n",
+    "    rep_model = rep_model.fit(p[['INTPTLON', 'INTPTLAT']], p['repvotes'])\n",
+    "    c['rep_votes'] = rep_model.predict(c[['INTPTLON', 'INTPTLAT']])\n",
+    "    c['rep_votes'] = (c['rep_votes'] * c['total_votes']).astype(int)\n",
+    "    \n",
+    "    ## interpolate high-income population from high-income households\n",
+    "    ##k = c['total_population'] / np.maximum(c['total_households'], 1)\n",
+    "    ##c['total_households'] = np.round(c['total_households'] * k).astype(int)\n",
+    "    ##c['$200,000_or_more'] = np.round(c['$200,000_or_more'] * k).astype(int)\n",
+    "    \n",
+    "    ## export results\n",
+    "    c = c.drop(['INTPTLON', 'INTPTLAT', 'total_households'], axis = 1)\n",
+    "    return c.reset_index()\n",
+    "    \n",
+    "## execute code\n",
+    "census_data = merge_potus_data()\n",
+    "del potus"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -362,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "06aa2b3b-cc94-447f-91c0-99ba2dfe6f15",
    "metadata": {},
    "outputs": [],
@@ -416,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "ddd5cd65-9122-4230-be26-e594d798ab99",
    "metadata": {},
    "outputs": [
@@ -482,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "be383a79-a7fd-432b-90f3-bf6b81c166f4",
    "metadata": {},
    "outputs": [],
@@ -581,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "67e4066a-99d3-4c41-92e7-6e80adeadae0",
    "metadata": {},
    "outputs": [],
@@ -647,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "eae507fa-f5f7-4a9a-8a7b-7fd0bb40bbef",
    "metadata": {},
    "outputs": [
@@ -743,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "85d88ccf-66d9-4aff-b06b-9693ea210435",
    "metadata": {},
    "outputs": [],
@@ -809,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "20191b03-9043-4e5b-85d2-f97aa357a597",
    "metadata": {},
    "outputs": [],
@@ -822,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "db352693-855a-402d-af68-6a1d8639a427",
    "metadata": {},
    "outputs": [
@@ -831,12 +1010,12 @@
      "output_type": "stream",
      "text": [
       "Time log:\n",
-      "   H2: 10:50:46\n",
-      "  GD1: 10:50:48\n",
-      "  RD1: 10:50:51\n",
-      "  MD1: 10:50:51\n",
-      "  MD2: 10:50:51\n",
-      "  End: 10:50:57\n"
+      "   H2: 18:30:43\n",
+      "  GD1: 18:30:46\n",
+      "  RD1: 18:30:53\n",
+      "  MD1: 18:30:53\n",
+      "  MD2: 18:30:53\n",
+      "  End: 18:30:59\n"
      ]
     }
    ],
@@ -846,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "9b249d53-d193-4008-9975-a451284ee066",
    "metadata": {},
    "outputs": [],
